Calc with changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,26 @@
             <input id="add-input-2" type="number" />
             <button id="add-button">Add</button>
             <span id="add-result"></span>
+            <!-- subtraction -->
+            <input id="sub-input-1" type="number"/>
+            <span>-</span>
+            <input id="sub-input-2" type="number"/>
+            <button id="sub-button">Subtract</button>
+            <span id="sub-result"></span>
+            <!-- Multiplication -->
+            <input id="mult-input-1" type="number"/>
+            <span>*</span>
+            <input id="mult-input-2" type="number"/>
+            <button id="mult-button">Multiply</button>
+            <span id="mult-result"></span>
+            <!-- Division -->
+            <input id="div-input-1" type="number"/>
+            <span>/</span>
+            <input id="div-input-2" type="number"/>
+            <button id="div-button">Division</button>
+            <span id="div-result"></span>
         </section>
+        
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
